fixed values algorithm. investigating screen top issue on ios devices

--- a/src/styles/sass/header2.scss
+++ b/src/styles/sass/header2.scss
@@ -10,6 +10,7 @@
       transition: background-color .5s, height .5s;
       z-index:20;
       overflow:hidden;
+      top:0;
       
       #header-items2{
         @include box(flex, row, space-between, center);
